--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,4 +4,25 @@ orbs:
 workflows:
   node-tests:
     jobs:
-      - node/test
+      build:
+        docker:
+          #specifytheversionyoudesirehere
+          -image:circleci/node: 7.1.0
+          
+          working_directory: ~/repo
+          
+          steps: 
+            -checkout
+          
+            -restore_cache: 
+              keys:
+                -v1-dependencies-{{checksum"package.json"}}
+                -v1-dependencies-
+              
+              -run: yarn install
+              -save_cache: 
+                paths:
+                  -node_modules
+                key: v1-dependencies-{{checksum"package.json"}}
+              
+              -run: yarn test
