circleci config pt 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,25 +4,4 @@ orbs:
 workflows:
   node-tests:
     jobs:
-      build:
-        docker:
-          #specifytheversionyoudesirehere
-          -image:circleci/node: 7.1.0
-          
-          working_directory: ~/repo
-          
-          steps: 
-            -checkout
-          
-            -restore_cache: 
-              keys:
-                -v1-dependencies-{{checksum"package.json"}}
-                -v1-dependencies-
-              
-              -run: yarn install
-              -save_cache: 
-                paths:
-                  -node_modules
-                key: v1-dependencies-{{checksum"package.json"}}
-              
-              -run: yarn test
+      - node/test
